--- a/Lab01-1.0.0.yaml
+++ b/Lab01-1.0.0.yaml
@@ -1,72 +1,81 @@
-openapi: 3.0.0
-servers:
-  
-  # Added by API Auto Mocking Plugin
-  - description: SwaggerHub API Auto Mocking
-    url: https://virtserver.swaggerhub.com/CRISTIANBENITEZ/Lab01/1.0.0
-  - description: Api principal
-    url: https://f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/cac-api-auth
-  - description: ruta de peticiones
-    url: /http://10.1.2.6:9080/
+openapi: 3.1
 info:
-  version: "1.0.0"
   title: LAB02 oAuth 2.0
   description: >-
-    Servicio de Prueba con **SWAGGER**
-tags::
+    ## Bienvenido al laboratorio de _Swagger_ , donde te sumergirás en la creación
+    de un servicio de prueba utilizando esta  herramienta de documentación y
+    desarrollo de **APIs**.
+  termsOfService: https://virtserver.swag
+  contact:
+    name: API Support
+    url: https://www.example.com/support
+    email: support@example.com
+  license:
+    name: Apache
+    url: https://www.apache.org/licenses/LICENSE-2.0.html
+  version: 1.0.0-oas3.1
+servers:
+-  url: https://virtserver.swaggerhub.com/CRISTIANBENITEZ/Lab01/1.0.0
+   description: SwaggerHub API Auto Mocking
+-  url: >-
+      https://f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/cac-api-auth
+   description: Api principal
+-  url: /http://10.1.2.6:9080/
+   description: Ruta de peticiones
+    
+tags:
   - Persona
- 
 paths:
-
-          
   /personal/{id}:
     get:
       tags:
         - Persona
-      summary: get persona
       description: Podemos obtener los datos de una persona en especifico
-      security: 
-        - oAuth2ClientCredentials: [f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user]
-      
-      parameters: 
-         - $ref: "#/components/parameters/personaIdParams"  
-                  
+      summary: get persona
+      operationId: getpersonaById
+      security:
+        - oAuth2ClientCredentials:
+            - >-
+              f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user
+      parameters:
+        - $ref: '#/components/parameters/personaIdParams'
       responses:
         '201':
           description: Datos obtenidos correctamente
           content:
             application/json:
               schema:
-                 $ref: "#/components/schemas/personalList"
+                $ref: '#/components/schemas/personalList'
         '404':
-          $ref: "#/components/responses/InternalServerError"  
-    
+          $ref: '#/components/responses/InternalServerError'
     put:
       tags:
         - Persona
-      summary: Update persona
-      security: 
-        - oAuth2ClientCredentials: [f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user]
       description: Podemos actualizar los datos de una persona en especifico
-      parameters: 
-         - $ref: "#/components/parameters/personaIdParams"
+      summary: Update persona
+      operationId: updatePersona
+      security:
+        - oAuth2ClientCredentials:
+            - >-
+              f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user
+      
+      parameters:
+        - $ref: '#/components/parameters/personaIdParams'
       requestBody:
-         required: true
-         content:
-            application/json:
-             schema: 
-              $ref: "#/components/schemas/personalListUp"
-                  
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/personalListUp'
       responses:
         '201':
           description: Datos actualizados correctamente
           content:
-            aplication/json:
-             schema:
-                 $ref: "#/components/schemas/personalListUp"
+            application/json:
+              schema:
+                $ref: '#/components/schemas/personalListUp'
         '404':
-          $ref: "#/components/responses/InternalServerError"  
-  
+          $ref: '#/components/responses/InternalServerError'
   /personal:
     get:
       tags:
@@ -74,73 +83,59 @@ paths:
       summary: get personas
       description: Podemos obtener los datos de todas las personas registradas
       security:
-        - oAuth2ClientCredentials: [f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user]
-      
-                  
+        - oAuth2ClientCredentials:
+            - >-
+              f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user
       responses:
         '201':
           description: Datos obtenidos correctamente
           content:
-            aplication/json:
-             schema:
-                 $ref: "#/components/schemas/personalList"
+            application/json:
+              schema:
+                $ref: '#/components/schemas/personalList'
         '404':
-          $ref: "#/components/responses/InternalServerError"    
-                
-  /personaltable: 
-    
+          $ref: '#/components/responses/InternalServerError'
+  /personaltable:
     get:
       tags:
         - Persona
       summary: Obtener personasTable
       description: Permite obtener los datos de todas las personasTable registradas
       security:
-        - oAuth2ClientCredentials: [f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user]
-      
-                  
+        - oAuth2ClientCredentials:
+            - >-
+              f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user
       responses:
         '201':
           description: Datos obtenidos correctamente
           content:
-            aplication/json:
-             schema:
-                $ref: "#/components/schemas/personalTable"
+            application/json:
+              schema:
+                $ref: '#/components/schemas/personalTable'
         '404':
-          $ref: "#/components/responses/InternalServerError"        
-      
+          $ref: '#/components/responses/InternalServerError'
 components:
-
-  parameters:
-      personaIdParams:
-          name: id
-          in: path
-          required: true
-          schema:
-            type: number
-            format: integer
-          example: 69
-     
-          
-  schemas: 
+  
+  schemas:
     personalList:
       type: array
-      items: 
+      items:
         type: object
         properties:
           id:
-            type: number
-            format: integer
+            type: integer
+            format: int32
           idnumber:
-            type: number
+            type: integer
             format: integer
           name:
             type: string
             description: Campo VARCHAR que representa un name
           type_persona:
             type: string
-            enum: 
-             - persona1
-             - persona2
+            enum:
+              - persona1
+              - persona2
           email:
             type: string
             format: email
@@ -149,128 +144,136 @@ components:
             description: Campo VARCHAR que representa company
           role:
             type: string
-            enum: 
-             - rol1
-             - rol2
+            enum:
+              - rol1
+              - rol2
           phone:
-            type: number
-            format: integer
+            type: integer
+            format: int32
     personalListUp:
-      
-        type: object
-        properties:
-          prs_name:
-            type: string
-            description: Campo VARCHAR que representa un name
-          prs_type_persona:
-            type: string
-            enum: 
-             - persona1
-             - persona2
-          prs_email:
-            type: string
-            format: email
-          prs_company:
-            type: string
-            description: Campo VARCHAR que representa company
-          prs_role:
-            type: string
-            enum: 
-             - rol1
-             - rol2
-          prs_phone:
-            type: number
-            format: integer
-    
+      type: object
+      properties:
+        prs_name:
+          type: string
+          description: Campo VARCHAR que representa un name
+        prs_type_persona:
+          type: string
+          enum:
+            - persona1
+            - persona2
+        prs_email:
+          type: string
+          format: email
+        prs_company:
+          type: string
+          description: Campo VARCHAR que representa company
+        prs_role:
+          type: string
+          enum:
+            - rol1
+            - rol2
+        prs_phone:
+          type: integer
+          format: int32
     personalTable:
-        type: object
-         
-        properties:
-          prs_id:
-            type: number
-            format: integer
-          prs_idnumber:
-            type: number
-            format: integer
-          prs_name:
-            type: string
-            description: Campo VARCHAR que representa un name
-          prs_type_persona:
-            type: string
-            enum: 
-             - persona1
-             - persona2
-          prs_email:
-            type: string
-            format: email
-          prs_company:
-            type: string
-            description: Campo VARCHAR que representa company
-          prs_department:
-            type: string
-            enum: 
-             - department1
-             - department2
-          prs_role:
-            type: string
-            enum: 
-             - rol1
-             - rol2
-          prs_phone:
-            type: number
-            format: integer
-          prs_photo_url:
-            type: string 
-            format: uri
-            description: URL de la imagen del la persona
-          
-          assistances:
-            type: array
-            items:
-              type: object
-              properties:
-                ast_id:
-                  type: number
-                  format: integer
-                prs_idnumber:
-                    type: number
-                    format: integer
-                ast_date:
-                    type: string
-                    format: date
-                ast_check_in:
-                    type: string
-                    format: time
-                    description: Hora del día en formato HH:mm:ss
-                ast_check_out:
-                    type: string
-                    format: time
-                    description: Hora del día en formato HH:mm:ss
-                ast_created_at:
-                    type: string
-                    format: date
-                ast_updated_at:
-                    type: string
-                    format: date
-                    
-                    
+      type: object
+      properties:
+        prs_id:
+          type: integer
+          format: int32
+        prs_idnumber:
+          type: integer
+          format: int32
+        prs_name:
+          type: string
+          description: Campo VARCHAR que representa un name
+        prs_type_persona:
+          type: string
+          enum:
+            - persona1
+            - persona2
+        prs_email:
+          type: string
+          format: email
+        prs_company:
+          type: string
+          description: Campo VARCHAR que representa company
+        prs_department:
+          type: string
+          enum:
+            - department1
+            - department2
+        prs_role:
+          type: string
+          enum:
+            - rol1
+            - rol2
+        prs_phone:
+          type: integer
+          format: int32
+        prs_photo_url:
+          type: string
+          format: uri
+          description: URL de la imagen del la persona
+        assistances:
+          type: array
+          items:
+            type: object
+            properties:
+              ast_id:
+                type: integer
+                format: int32
+              prs_idnumber:
+                type: integer
+                format: int32
+              ast_date:
+                type: string
+                format: date
+              ast_check_in:
+                type: string
+                format: time
+                description: Hora del dia en formato HH:mm:ss
+              ast_check_out:
+                type: string
+                format: time
+                description: Hora del dia en formato HH:mm:ss
+              ast_created_at:
+                type: string
+                format: date
+              ast_updated_at:
+                type: string
+                format: date
+  
+  
+  
+  parameters:
+    personaIdParams:
+      name: id
+      in: path
+      required: true
+      schema:
+        type: integer
+        format: int32
+      style: simple
+      example: 69
+      
+  responses:
+    InternalServersuccefull:
+      description: Datos obtenidos correctamente
+    InternalServerError:
+      description: Ocurrio un error mientras se procesaba la respuesta.
+  
   securitySchemes:
-     oAuth2ClientCredentials:
+    oAuth2ClientCredentials:
       type: oauth2
-      description: Este API utiliza OAuth 2 con el flujo de concesión de credenciales de cliente.
+      description: >-
+        Este API utiliza OAuth 2 con el flujo de concesión de credenciales de
+        cliente.
       flows:
         clientCredentials:
-          tokenUrl: https://idcs-f23adce9edfa453888c438104783e1be.identity.oraclecloud.com:443/oauth2/v1/token
+          tokenUrl: >-
+            https://idcs-f23adce9edfa453888c438104783e1be.identity.oraclecloud.com:443/oauth2/v1/token
           scopes:
             f7t7rs4yrtdl4tmt5lunrwohjm.apigateway.us-ashburn-1.oci.customer-oci.com/super_user: Read persona information
             users-write: Write persona information
-                  
-            
-            
-  responses:
-    InternalServersuccefull:
-      description: 
-        Datos obtenidos correctamente
-    InternalServerError:
-      description: 
-        Ocurrio un error mientras se procesaba la respuesta.
+  
